stderr
   Compiling hiker v0.1.0 (/sandbox)
error[E0425]: cannot find value `second_rollnum` in this scope
  --> src/lib.rs:13:67
   |
13 |         total_score += first_roll.num.to_digit(10).unwrap_or(0) + second_rollnum.to_digit(10).unwrap_or(0);
   |                                                                   ^^^^^^^^^^^^^^ help: a local variable with a similar name exists: `second_roll`

error[E0610]: `char` is a primitive type and therefore doesn't have fields
  --> src/lib.rs:13:35
   |
13 |         total_score += first_roll.num.to_digit(10).unwrap_or(0) + second_rollnum.to_digit(10).unwrap_or(0);
   |                                   ^^^

Some errors have detailed explanations: E0425, E0610.
For more information about an error, try `rustc --explain E0425`.
error: could not compile `hiker` (lib test) due to 2 previous errors
warning: build failed, waiting for other jobs to finish...
error: could not compile `hiker` (lib) due to 2 previous errors
